local-dev/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - http:
      paths:
      - path: /api/sensor-log-parser
        backend:
          serviceName: sensor-log-parser
          servicePort: 8081
